# Hackathon-IV-Ai-Tutor

./: CLAUDE.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1b3d17a08fb1_add_name_to_users.py  778b3865151a_add_avatar_to_users.py  a3f9c2d14e87_add_llm_usage_table.py  bf15f8c77804_initial_schema.py  c7e2a1b94f63_add_password_reset_codes_table.py
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  r2_client.py  security.py  startup.py
backend/app/models/: __init__.py  llm_usage.py  password_reset.py  progress.py  quiz_attempt.py  search_index.py  user.py
backend/app/premium/: __init__.py
backend/app/routers/: access.py  auth.py  chapters.py  health.py  progress.py  quizzes.py  search.py
backend/app/schemas/: access.py  auth.py  chapter.py  progress.py  quiz.py
backend/app/services/: access_service.py  auth_service.py  progress_service.py  quiz_service.py  r2_service.py  search_service.py
backend/content/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md
backend/quizzes/: quiz-01.json  quiz-02.json  quiz-03.json  quiz-04.json  quiz-05.json
backend/scripts/: check_user_name.py  debug_login.py  test_live.py  upload_to_r2.py  verify_all.py
backend/skills/: concept-explainer.md  progress-motivator.md  quiz-master.md  socratic-tutor.md
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py  test_premium_endpoints.py
specs/main/: plan.md  (+3 more)
(+133 files in other folders)
